--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Title of Page</title>
+    <title>Play Piano</title>
     <meta name="description" content="Description of Page">
     <meta name="author" content="JH Technologies">
 
@@ -14,39 +14,40 @@
   </head>
 
   <body>
-    <div class="container my-container">
-      <div class="row my-row justify-content-around">
-
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">A</div>
+      <div class="head">
+        <img src="../images/Steinway_Logo.png" alt="">
+      </div>
+      <div class="row my-row">
+        <div class="mycol">
+          <div data-key="" class="key">C4</div>
         </div>
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">S</div>
+        <div class="mycol">
+          <div data-key="" class="key">D4</div>
         </div>
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">D</div>
+        <div class="mycol">
+          <div data-key="" class="key">E4</div>
         </div>
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">F</div>
+        <div class="mycol">
+          <div data-key="" class="key">F4</div>
         </div>
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">G</div>
+        <div class="mycol">
+          <div data-key="" class="key">G4</div>
         </div>
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">H</div>
+        <div class="mycol">
+          <div data-key="" class="key">A4</div>
         </div>
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">J</div>
+        <div class="mycol">
+          <div data-key="" class="key">B4</div>
         </div>
-        <div class="col-sm-6 col-md-1 mycol">
-          <div data-key="" class="key">K</div>
+        <div class="mycol">
+          <div data-key="" class="key">C5</div>
         </div>
       </div>
-    </div>
+
 
     <footer>
-      <p>Photo by</p>
-      <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@henmankk?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Keagan Henman"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Keagan Henman</span></a>
+      <!-- <p>Photo by</p>
+      <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@henmankk?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Keagan Henman"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Keagan Henman</span></a> -->
     </footer>
   </body>
 </html>
